--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
-    "name": "teamprofilegenerator",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-      "start": "node index",
-      "watch": "nodemon index",
-      "test": "jest"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-      "chalk": "^2.4.1",
-      "inquirer": "^6.2.1"
-    },
-    "devDependencies": {
-      "jest": "^24.8.0"
-    }
+  "name": "unit10hw",
+  "version": "1.0.0",
+  "description": "OOP and testing for week 10 homework",
+  "main": "app.js",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "scripts": {
+    "test": "jest --verbose test/*"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/stevetrilogy/unit10hw.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/stevetrilogy/unit10hw/issues"
+  },
+  "homepage": "https://github.com/stevetrilogy/unit10hw#readme",
+  "dependencies": {
+    "inquirer": "^6.3.1"
+  },
+  "devDependencies": {
+    "jest": "^24.8.0"
   }
+}
